k8s/nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ucraft-app-deployment
spec:
  replicas: 2 # Adjust the number of desired replicas as needed
  selector:
    matchLabels:
      app: ucraft-app
  template:
    metadata:
      labels:
        app: ucraft-app
    spec:
      containers:
        - name: docusaurus-app
          image: nginx:alpine
          ports:
          - containerPort: 80
