k8s/nginx.yml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
spec:
  containers:
    - name: nginx
      image: gcr.io/avian-cosmos-400510/docusaurus-app
  # imagePullSecrets:
  # - name: gcr-json-key
