k8s/php-ini-test_pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-pod
spec:
  containers:
    - name: test-container
      image: k8s.gcr.io/busybox
      command: [ "/bin/sh", "-c", "cat /usr/local/etc/php/php.ini" ]
      volumeMounts:
      - name: config-volume
        mountPath: /usr/local/etc/php
  volumes:
    - name: config-volume
      configMap:
        name: php-ini-config
