k8s/gce-https-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: external-ingress
  annotations:
    kubernetes.io/ingress.class: "gce"
    kubernetes.io/ingress.allow-http: "true"
    networking.gke.io/v1beta1.FrontendConfig: https-redirect
    ingress.gcp.kubernetes.io/pre-shared-cert: "docusaurus-ucraft-app,application-ucraft-app"
    kubernetes.io/ingress.global-static-ip-name: http-ucraft-app-ip
spec:
  rules:
  - host: "application.cloudsysops.com"
    http:
      paths:
      - path: /*
        pathType: ImplementationSpecific
        backend:
          service:
            name: ucraft-app-service
            port:
              number: 60001
  - host: "docusaurus.cloudsysops.com"
    http:
      paths:
      - path: /*
        pathType: ImplementationSpecific
        backend:
          service:
            name: ucraft-app-service
            port:
              number: 60002
