k8s/http-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: http-ingress
  annotations:
    kubernetes.io/ingress.class: "gce"
    kubernetes.io/ingress.allow-http: "true"
    kubernetes.io/ingress.global-static-ip-name: http-ucraft-app-ip
spec:
  rules:
  - host: "application.ucraft.app"
    http:
      paths:
      - path: /*
        pathType: ImplementationSpecific
        backend:
          service:
            name: ucraft-app-service
            port:
              number: 60001
  - host: "docusaurus.ucraft.app"
    http:
      paths:
      - path: /*
        pathType: ImplementationSpecific
        backend:
          service:
            name: ucraft-app-service
            port:
              number: 60002
